--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -717,7 +717,7 @@ header.always-light .header__logo img[data-background="light"] {
 header.light .header__logo img[data-background="transparent"] {
     display: none;
 }
-header.light .fa-chevron-down {
+header.light .fa-chevron-down, header.light .fa-angles-right{
     color: var(--accent-color);
 }
 
@@ -731,14 +731,14 @@ header.light .fa-chevron-down {
     width: 180px;
     aspect-ratio: 3.28;
 }
-.header__search_option {
+.header__search_btn {
     font-size: 1.6rem;
     cursor: pointer;
 }
-.header__search_option span {
+.header__search_btn span {
     position: relative;
 }
-.header__search_option span::after {
+.header__search_btn span::after {
     content: "";
     position: absolute;
     left: 0;
@@ -747,7 +747,7 @@ header.light .fa-chevron-down {
     width: 100%;
     background-color: var(--accent-color);
 }
-.header__search_option .fa-search {
+.header__search_btn .fa-search {
     display: none;
 }
 nav .header__main-menu {
@@ -761,6 +761,10 @@ nav .header__main-menu {
     font-size: 1.6rem;
     gap: 0.7rem;
     cursor: pointer;
+    width: fit-content;
+}
+.header__submenu .submenu-item .fa-chevron-down {
+    opacity: 0;
 }
 .header__right-group {
     display: flex;
@@ -774,11 +778,11 @@ nav .header__main-menu {
 .header__hamburger-menu .fa-xmark {
     display: none;
 }
-.header__nav_option .fa-chevron-down {
+.header__nav_option .fa-chevron-down, .header__nav_option .fa-angles-right {
     font-size: 1.1rem;
 }
 
-.header__submenu {
+.header__submenu, .header__search-container {
     background-color: white;
     height: 0px;
     overflow: hidden;
@@ -822,6 +826,32 @@ nav .header__main-menu {
 #subsubmenu-title {
     opacity: 0.6;
 }
+
+
+.header__search-container .saerch-input-container{
+    border-radius: 5px;
+    overflow: hidden;
+    display: flex;
+    align-items: stretch;
+    font-size: 1.4rem;
+    width: 100%;
+    box-shadow: 0 2px 8px #0002;
+}
+
+.saerch-input-container [type=submit]{
+    background-color: var(--accent-color);
+    color: var(--off-white-color);
+    padding: 1.5rem 2rem;
+}
+
+.header__search-input{
+    padding: 1.5rem 2rem;
+    background-color: #f5f5f5;
+    width: 100%;
+    flex-grow: 1;
+}
+
+
 
 /* bread crumbs */
 .bread-crumbs-container {
