--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1021,6 +1021,14 @@ nav .header__main-menu {
     border-radius: var(--card-border-radius);
     overflow: hidden;
 }
+.article-hero__media .events-video-iframe{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    inset: 0;
+}
+
+
 .article-hero__metadata{
     display: flex;
     align-items: center;
