--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -828,7 +828,7 @@ nav .header__main-menu {
 }
 
 
-.header__search-container .saerch-input-container{
+.search-input-container{
     border-radius: 5px;
     overflow: hidden;
     display: flex;
@@ -838,7 +838,7 @@ nav .header__main-menu {
     box-shadow: 0 2px 8px #0002;
 }
 
-.saerch-input-container [type=submit]{
+.search-input-container [type=submit]{
     background-color: var(--accent-color);
     color: var(--off-white-color);
     padding: 1.5rem 2rem;
@@ -967,7 +967,8 @@ nav .header__main-menu {
     margin-bottom: 3rem;
 }
 .book-details-overview__purchaseBtn,
-.book-details-overview__downloadBtn {
+.book-details-overview__downloadBtn,
+.search-load-more-btn {
     display: flex;
     align-items: center;
     gap: 1rem;
@@ -979,6 +980,9 @@ nav .header__main-menu {
     border-radius: var(--card-border-radius);
     margin-left: auto;
     margin-top: 4rem;
+}
+.search-load-more-btn{
+    margin: 0
 }
 .book-details-overview__downloadBtn{
     margin: 0;
