--- a/assets/css/breakpoints.css
+++ b/assets/css/breakpoints.css
@@ -399,6 +399,13 @@
         width: 100%;
         justify-content: center;
     }
+
+    .mobile-aspect-3{
+        aspect-ratio: 3;
+    }
+    .mobile-aspect-1{
+        aspect-ratio: 1;
+    }
 }
 
 @media screen and (max-width: 500px) {
